# personal_coding_assistant

./: TODO.md
coding_assistant_frontend/: package-lock.json  package.json
coding_assistant_frontend/app/: layout.tsx  page.tsx
coding_assistant_frontend/components/chat/: AskUserPrompt.tsx  ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx  ToolCallCard.tsx
coding_assistant_frontend/components/sessions/: SessionSidebar.tsx
coding_assistant_frontend/components/settings/: ConfigPanel.tsx
coding_assistant_frontend/hooks/: useChat.ts
self_implemented_coding_assistant/: .gitignore  README.md  main.py  oceans_essay.txt  pyproject.toml
self_implemented_coding_assistant/api/: config.py  models.py  server.py  sse.py  state.py
self_implemented_coding_assistant/api/routers/: chat.py  config.py  sessions.py
self_implemented_coding_assistant/api/services/: agent_runner.py
self_implemented_coding_assistant/pi/: chat.py  config.py  session.py  telegram_bot.py
self_implemented_coding_assistant/pi/ai/: base.py  client.py
self_implemented_coding_assistant/pi/ai/providers/: __init__.py  gemini.py  openai.py
self_implemented_coding_assistant/pi/tools/: ask_user.py  bash.py  edit.py  find.py  grep.py  ls.py  read.py  write.py
